--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nilatilmoena.marvelapp">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -9,12 +11,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MarvelApp">
-
+        <activity
+            android:name=".ui.SeriesActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.EventsActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.ComicsActivity"
+            android:exported="true" />
         <activity
             android:name=".ui.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -24,7 +35,6 @@
         <activity
             android:name=".ui.CharactersActivity"
             android:exported="true" />
-
     </application>
 
 </manifest>
